- add scoring schema generator and use it

--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
@@ -72,8 +72,7 @@ $schema$
 name = gnumed
 server alias = local host
 audit disable = 1
-scoring table prefix = score_
-scoring fields table = scoring_fields
+scoring disable = 1
 schema = $schema$
 $schema$
 
@@ -118,7 +117,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.5  2003-10-19 12:28:26  ncq
+# Revision 1.6  2003-10-19 12:57:19  ncq
+# - add scoring schema generator and use it
+#
+# Revision 1.5  2003/10/19 12:28:26  ncq
 # - add STIKO Impfkalender and scoring defs
 #
 # Revision 1.4  2003/08/26 14:11:13  ncq
