--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.19 $
+version = $Revision: 1.20 $
 
 #----------------------------------
 [installation]
@@ -114,6 +114,9 @@ audit disable = 0
 audit trail parent table = audit_trail
 audit trail table prefix = log_
 audit fields table = audit_fields
+scoring disable = 0
+scoring table prefix = score_
+scoring fields table = scoring_fields
 schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
@@ -121,6 +124,7 @@ sql/gmI18N.sql
 sql/gmAudit.sql
 sql/gmCrossDB_FKs.sql
 sql/gmCrossDB_FK-views.sql
+sql/gmScoring.sql
 $schema$
 
 #----------------------------------
@@ -190,7 +194,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.19  2003-10-01 15:59:20  ncq
+# Revision 1.20  2003-10-19 12:57:19  ncq
+# - add scoring schema generator and use it
+#
+# Revision 1.19  2003/10/01 15:59:20  ncq
 # - remove now-obsolete audit_mark defines
 #
 # Revision 1.18  2003/08/26 14:11:13  ncq
