--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.14 $
+version = $Revision: 1.15 $
 
 #----------------------------------
 [installation]
@@ -76,6 +76,9 @@ audit disable = 0
 audit trail parent table = audit_trail
 audit trail table prefix = log_
 audit fields table = audit_fields
+scoring disable = 0
+scoring table prefix = score_
+scoring fields table = scoring_fields
 schema = $schema$
 sql/gmSchemaRevision.sql
 sql/gmServices.sql
@@ -83,6 +86,7 @@ sql/gmI18N.sql
 sql/gmAudit.sql
 sql/gmCrossDB_FKs.sql
 sql/gmCrossDB_FK-views.sql
+sql/gmScoring.sql
 $schema$
 
 #----------------------------------
@@ -168,7 +172,10 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.14  2003-10-01 15:59:20  ncq
+# Revision 1.15  2003-10-19 12:57:19  ncq
+# - add scoring schema generator and use it
+#
+# Revision 1.14  2003/10/01 15:59:20  ncq
 # - remove now-obsolete audit_mark defines
 #
 # Revision 1.13  2003/08/26 14:11:13  ncq
