--- a/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-standard.conf.template,v $
-version = $Revision: 1.14 $
+version = $Revision: 1.15 $
 
 #----------------------------------
 [installation]
@@ -96,6 +96,15 @@ audit trail table prefix = log_
 # all audited tables must inherit from this table
 audit fields table = audit_fields
 
+# phrase wheel scoring related tables:
+# setting this to 1 will disable creation of
+# scoring related tables
+scoring disable = 0
+# all scoring tables start with this prefix
+scoring table prefix = score_
+# all scoring tables inherit from this table
+scoring fields table = scoring_fields
+
 # here you can import some schema files once per database
 # such as revision tracking, translation, auditing etc.
 schema = $schema$
@@ -105,6 +114,7 @@ sql/gmI18N.sql
 sql/gmAudit.sql
 sql/gmCrossDB_FKs.sql
 sql/gmCrossDB_FK-views.sql
+sql/gmScoring.sql
 $schema$
 
 
@@ -260,7 +270,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-standard.conf.template,v $
-# Revision 1.14  2003-10-01 15:59:20  ncq
+# Revision 1.15  2003-10-19 12:57:19  ncq
+# - add scoring schema generator and use it
+#
+# Revision 1.14  2003/10/01 15:59:20  ncq
 # - remove now-obsolete audit_mark defines
 #
 # Revision 1.13  2003/08/26 14:11:13  ncq
