-added amis-data.sql to schema files

--- a/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -40,6 +40,7 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/country.specific/de/gmAMIS.de.sql
+sql/country.specific/de/amis-data.sql
 $schema$
 
 #----------------------------------
@@ -94,6 +95,9 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-amis.conf,v $
-# Revision 1.1  2003-10-26 16:12:04  hinnef
+# Revision 1.2  2003-10-26 22:52:03  hinnef
+# -added amis-data.sql to schema files
+#
+# Revision 1.1  2003/10/26 16:12:04  hinnef
 # - initial revision
 #
