- add AMIS schema

--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.6 $
+version = $Revision: 1.7 $
 
 #----------------------------------
 [installation]
@@ -21,12 +21,17 @@ Die Datenbankstruktur muß bereits in einer Datenbank "gnumed"
 installiert sein, ebenso muß mindestens der Nutzer gm-dbowner
 bereits existieren.
 
+Für die Medikamentendatenbank AMIS werden nur die Tabellen
+installiert, die Daten müssen aus lizenzrechtlichen Gründen
+vom Nutzer selbst importiert werden.
+
 $description$
 
 services = $services$
 demographics-de
 clinical-de
 documents-de
+AMIS
 $services$
 
 #----------------------------------
@@ -63,6 +68,16 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/country.specific/de/gmBlobs-Data.de.sql
+$schema$
+
+[service AMIS]
+name = pharmaceutica
+version = 0.1
+database alias = core
+postgres version = 7.1
+registration database = core
+schema = $schema$
+sql/country.specific/de/gmAMIS.de.sql
 $schema$
 
 #----------------------------------
@@ -117,7 +132,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.6  2003-10-19 12:57:19  ncq
+# Revision 1.7  2003-10-27 16:03:01  ncq
+# - add AMIS schema
+#
+# Revision 1.6  2003/10/19 12:57:19  ncq
 # - add scoring schema generator and use it
 #
 # Revision 1.5  2003/10/19 12:28:26  ncq
