- add AMIS schema

--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.20 $
+version = $Revision: 1.21 $
 
 #----------------------------------
 [installation]
@@ -34,6 +34,7 @@ demographics
 clinical
 documents
 reference
+AMIS
 $services$
 
 #----------------------------------
@@ -104,6 +105,16 @@ postgres version = 7.1
 registration database = core
 schema = $schema$
 sql/gmReference.sql
+$schema$
+
+[service AMIS]
+name = pharmaceutica
+version = 0.1
+database alias = core
+postgres version = 7.1
+registration database = core
+schema = $schema$
+sql/country.specific/de/gmAMIS.de.sql
 $schema$
 
 #----------------------------------
@@ -194,7 +205,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.20  2003-10-19 12:57:19  ncq
+# Revision 1.21  2003-10-27 16:09:19  ncq
+# - add AMIS schema
+#
+# Revision 1.20  2003/10/19 12:57:19  ncq
 # - add scoring schema generator and use it
 #
 # Revision 1.19  2003/10/01 15:59:20  ncq
