- include more test data

--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.7 $
+version = $Revision: 1.8 $
 
 #----------------------------------
 [installation]
@@ -58,6 +58,7 @@ schema = $schema$
 sql/country.specific/de/gmClinical.de.sql
 sql/country.specific/de/gmClinical-Data.de.sql
 sql/country.specific/de/STIKO-Impfkalender.sql
+sql/country.specific/de/Impfstoffe.sql
 $schema$
 
 [service documents-de]
@@ -132,7 +133,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.7  2003-10-27 16:03:01  ncq
+# Revision 1.8  2003-10-31 23:24:31  ncq
+# - include more test data
+#
+# Revision 1.7  2003/10/27 16:03:01  ncq
 # - add AMIS schema
 #
 # Revision 1.6  2003/10/19 12:57:19  ncq
