--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.21 $
+version = $Revision: 1.22 $
 
 #----------------------------------
 [installation]
@@ -35,6 +35,7 @@ clinical
 documents
 reference
 AMIS
+test data
 $services$
 
 #----------------------------------
@@ -60,7 +61,6 @@ schema = $schema$
 sql/gmDemographics.sql
 sql/gmDemographics-Person-views.sql
 sql/gmDemographics-Person-data.sql
-sql/gmDemographics-Person-test_data.sql
 sql/gmDemographics-GIS-views.sql
 sql/gmDemographics-GIS-data.sql
 sql/gmDemographics-Org-views.sql
@@ -83,6 +83,8 @@ sql/gmClinicalViews.sql
 sql/gmClinicalData.sql
 sql/country.specific/de/gmClinical.de.sql
 sql/country.specific/de/gmClinical-Data.de.sql
+sql/country.specific/de/STIKO-Impfkalender.sql
+sql/country.specific/de/Impfstoffe.sql
 $schema$
 
 [service documents]
@@ -117,6 +119,19 @@ schema = $schema$
 sql/country.specific/de/gmAMIS.de.sql
 $schema$
 
+[service test data]
+# doesn't make any difference, actually
+name = historica
+version = 0.1
+database alias = core
+postgres version = 7.1
+registration database = core
+schema = $schema$
+sql/test-data/gmDemographics-Person-test_data.sql
+sql/test-data/test_data-Leonard_McCoy.sql
+sql/test-data/test_data-James_Kirk.sql
+$schema$
+
 #----------------------------------
 [database core]
 name = gnumed-public
@@ -140,7 +155,7 @@ $schema$
 
 #----------------------------------
 [server local host]
-name = 127.0.0.1
+name = 
 port = 5432
 template database = template1
 super user alias = postgres
@@ -205,7 +220,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.21  2003-10-27 16:09:19  ncq
+# Revision 1.22  2003-10-31 23:24:32  ncq
+# - include more test data
+#
+# Revision 1.21  2003/10/27 16:09:19  ncq
 # - add AMIS schema
 #
 # Revision 1.20  2003/10/19 12:57:19  ncq
