--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_knoppix.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_knoppix.conf,v $
-version = $Revision: 1.5 $
+version = $Revision: 1.6 $
 
 #----------------------------------
 [installation]
@@ -59,7 +59,7 @@ schema = $schema$
 sql/gmDemographics.sql
 sql/gmDemographics-Person-views.sql
 sql/gmDemographics-Person-data.sql
-sql/gmDemographics-Person-test_data.sql
+sql/test-data/gmDemographics-Person-test_data.sql
 sql/gmDemographics-GIS-views.sql
 sql/gmDemographics-GIS-data.sql
 sql/country.specific/de/german-family_relations.sql
@@ -176,7 +176,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_knoppix.conf,v $
-# Revision 1.5  2003-10-01 15:59:20  ncq
+# Revision 1.6  2003-10-31 23:24:32  ncq
+# - include more test data
+#
+# Revision 1.5  2003/10/01 15:59:20  ncq
 # - remove now-obsolete audit_mark defines
 #
 # Revision 1.4  2003/08/03 14:04:10  ncq
