--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.17 $
+version = $Revision: 1.18 $
 
 #----------------------------------
 [installation]
@@ -65,7 +65,7 @@ schema = $schema$
 sql/gmDemographics.sql
 sql/gmDemographics-Person-views.sql
 sql/gmDemographics-Person-data.sql
-sql/gmDemographics-Person-test_data.sql
+sql/test-data/gmDemographics-Person-test_data.sql
 sql/gmDemographics-GIS-views.sql
 sql/gmDemographics-GIS-data.sql
 sql/country.specific/de/german-family_relations.sql
@@ -210,7 +210,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.17  2003-10-19 12:57:19  ncq
+# Revision 1.18  2003-10-31 23:24:32  ncq
+# - include more test data
+#
+# Revision 1.17  2003/10/19 12:57:19  ncq
 # - add scoring schema generator and use it
 #
 # Revision 1.16  2003/10/01 15:59:20  ncq
