- actually, no test data whatsoever

--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 [installation]
@@ -56,7 +56,6 @@ schema = $schema$
 sql/gmDemographics.sql
 sql/gmDemographics-Person-views.sql
 sql/gmDemographics-Person-data.sql
-sql/test-data/gmDemographics-Person-test_data.sql
 sql/gmDemographics-GIS-views.sql
 sql/gmDemographics-GIS-data.sql
 sql/gmDemographics-Org-views.sql
@@ -185,7 +184,10 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.8  2003-10-31 23:24:31  ncq
+# Revision 1.9  2003-10-31 23:25:10  ncq
+# - actually, no test data whatsoever
+#
+# Revision 1.8  2003/10/31 23:24:31  ncq
 # - include more test data
 #
 # Revision 1.7  2003/10/19 12:57:19  ncq
