- add schema base directory option to config files - hence we don't need the sql link anymore

--- a/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf,v $
-version = $Revision: 1.2 $
+version = $Revision: 1.3 $
 
 #----------------------------------
 [installation]
@@ -38,9 +38,10 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/country.specific/de/
 schema = $schema$
-sql/country.specific/de/gmAMIS.de.sql
-sql/country.specific/de/amis-data.sql
+gmAMIS.de.sql
+amis-data.sql
 $schema$
 
 #----------------------------------
@@ -95,7 +96,11 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-amis.conf,v $
-# Revision 1.2  2003-10-26 22:52:03  hinnef
+# Revision 1.3  2003-11-02 12:48:55  ncq
+# - add schema base directory option to config files
+# - hence we don't need the sql link anymore
+#
+# Revision 1.2  2003/10/26 22:52:03  hinnef
 # -added amis-data.sql to schema files
 #
 # Revision 1.1  2003/10/26 16:12:04  hinnef
