--- a/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-archive.conf,v $
-version = $Revision: 1.12 $
+version = $Revision: 1.13 $
 
 #----------------------------------
 [installation]
@@ -36,8 +36,9 @@ version = 0.1
 database alias = gm-archive
 postgres version = 7.1
 registration database = gm-archive
+schema base directory = ../sql/
 schema = $schema$
-sql/gmconfiguration.sql
+gmconfiguration.sql
 $schema$
 
 # first one already imports gmServices, so ...
@@ -47,14 +48,15 @@ version = 0.1
 database alias = gm-archive
 postgres version = 7.1
 registration database = gm-archive
+schema base directory = ../sql/
 schema = $schema$
-sql/gmidentity.sql
-sql/gmIdentityViews.sql
-sql/gmIdentityData.sql
-sql/gmIdentityTestData.sql
-sql/gmgis.sql
-sql/gmGisData.sql
-sql/country.specific/de/german-family_relations.sql
+gmidentity.sql
+gmIdentityViews.sql
+gmIdentityData.sql
+gmIdentityTestData.sql
+gmgis.sql
+gmGisData.sql
+country.specific/de/german-family_relations.sql
 $schema$
 
 [service documents]
@@ -63,10 +65,11 @@ version = 0.1
 database alias = gm-archive
 postgres version = 7.1
 registration database = gm-archive
+schema base directory = ../sql/
 schema = $schema$
-sql/gmBlobsData.sql
-sql/gmBlobs.sql
-sql/country.specific/de/german-doc_types.sql
+gmBlobsData.sql
+gmBlobs.sql
+country.specific/de/german-doc_types.sql
 $schema$
 
 #----------------------------------
@@ -79,13 +82,14 @@ audit disable = 0
 audit trail parent table = audit_trail
 audit trail table prefix = log_
 audit fields table = audit_fields
+schema base directory = ../sql/
 schema = $schema$
-sql/gmSchemaRevision.sql
-sql/gmServices.sql
-sql/gmI18N.sql
-sql/gmAudit.sql
-sql/gmCrossDB_FKs.sql
-sql/gmCrossDB_FK-views.sql
+gmSchemaRevision.sql
+gmServices.sql
+gmI18N.sql
+gmAudit.sql
+gmCrossDB_FKs.sql
+gmCrossDB_FK-views.sql
 $schema$
 
 #----------------------------------
@@ -97,6 +101,7 @@ port = 5432
 template database = template1
 super user alias = postgres
 procedural language library check = yes
+schema base directory = ../sql/
 schema = $schema$
 gmArchiveAccounts.sql
 $schema$
@@ -159,7 +164,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-archive.conf,v $
-# Revision 1.12  2003-10-01 15:59:20  ncq
+# Revision 1.13  2003-11-02 12:48:55  ncq
+# - add schema base directory option to config files
+# - hence we don't need the sql link anymore
+#
+# Revision 1.12  2003/10/01 15:59:20  ncq
 # - remove now-obsolete audit_mark defines
 #
 # Revision 1.11  2003/08/26 14:11:13  ncq
