--- a/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-au.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-au.conf,v $
-version = $Revision: 1.1 $
+version = $Revision: 1.2 $
 
 #----------------------------------
 [installation]
@@ -35,9 +35,10 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/country.specific/au/
 schema = $schema$
-sql/country.specific/au/gmDemographics.au.sql
-sql/country.specific/au/postcodes.au.sql
+gmDemographics.au.sql
+postcodes.au.sql
 $schema$
 
 #----------------------------------
@@ -91,7 +92,11 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-au.conf,v $
-# Revision 1.1  2003-09-23 00:28:27  ncq
+# Revision 1.2  2003-11-02 12:48:55  ncq
+# - add schema base directory option to config files
+# - hence we don't need the sql link anymore
+#
+# Revision 1.1  2003/09/23 00:28:27  ncq
 # - AU language pack
 #
 # Revision 1.4  2003/08/26 14:11:13  ncq
