--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.8 $
+version = $Revision: 1.9 $
 
 #----------------------------------
 [installation]
@@ -43,9 +43,10 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/country.specific/de/
 schema = $schema$
-sql/country.specific/de/gmDemographics.de.sql
-sql/country.specific/de/gmDemographics-Data.de.sql
+gmDemographics.de.sql
+gmDemographics-Data.de.sql
 $schema$
 
 [service clinical-de]
@@ -54,11 +55,12 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/country.specific/de/
 schema = $schema$
-sql/country.specific/de/gmClinical.de.sql
-sql/country.specific/de/gmClinical-Data.de.sql
-sql/country.specific/de/STIKO-Impfkalender.sql
-sql/country.specific/de/Impfstoffe.sql
+gmClinical.de.sql
+gmClinical-Data.de.sql
+STIKO-Impfkalender.sql
+Impfstoffe.sql
 $schema$
 
 [service documents-de]
@@ -67,8 +69,9 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/country.specific/de/
 schema = $schema$
-sql/country.specific/de/gmBlobs-Data.de.sql
+gmBlobs-Data.de.sql
 $schema$
 
 [service AMIS]
@@ -77,8 +80,9 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/country.specific/de/
 schema = $schema$
-sql/country.specific/de/gmAMIS.de.sql
+gmAMIS.de.sql
 $schema$
 
 #----------------------------------
@@ -133,7 +137,11 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.8  2003-10-31 23:24:31  ncq
+# Revision 1.9  2003-11-02 12:48:55  ncq
+# - add schema base directory option to config files
+# - hence we don't need the sql link anymore
+#
+# Revision 1.8  2003/10/31 23:24:31  ncq
 # - include more test data
 #
 # Revision 1.7  2003/10/27 16:03:01  ncq
