--- a/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-monolithic_core.conf,v $
-version = $Revision: 1.9 $
+version = $Revision: 1.10 $
 
 #----------------------------------
 [installation]
@@ -39,9 +39,10 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 
 schema = $schema$
-sql/gmconfiguration.sql
+gmconfiguration.sql
 $schema$
 
 
@@ -51,14 +52,15 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 
 schema = $schema$
-sql/gmDemographics.sql
-sql/gmDemographics-Person-views.sql
-sql/gmDemographics-Person-data.sql
-sql/gmDemographics-GIS-views.sql
-sql/gmDemographics-GIS-data.sql
-sql/gmDemographics-Org-views.sql
+gmDemographics.sql
+gmDemographics-Person-views.sql
+gmDemographics-Person-data.sql
+gmDemographics-GIS-views.sql
+gmDemographics-GIS-data.sql
+gmDemographics-Org-views.sql
 $schema$
 
 [service clinical]
@@ -67,12 +69,13 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 
 schema = $schema$
-sql/gmclinical.sql
-sql/gmMeasurements.sql
-sql/gmClinicalViews.sql
-sql/gmClinicalData.sql
+gmclinical.sql
+gmMeasurements.sql
+gmClinicalViews.sql
+gmClinicalData.sql
 $schema$
 
 [service documents]
@@ -81,9 +84,10 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmBlobs.sql
-sql/gmBlobsData.sql
+gmBlobs.sql
+gmBlobsData.sql
 $schema$
 
 [service reference]
@@ -92,8 +96,9 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmReference.sql
+gmReference.sql
 $schema$
 
 #----------------------------------
@@ -107,14 +112,15 @@ audit fields table = audit_fields
 scoring disable = 0
 scoring table prefix = score_
 scoring fields table = scoring_fields
+schema base directory = ../sql/
 schema = $schema$
-sql/gmSchemaRevision.sql
-sql/gmServices.sql
-sql/gmI18N.sql
-sql/gmAudit.sql
-sql/gmCrossDB_FKs.sql
-sql/gmCrossDB_FK-views.sql
-sql/gmScoring.sql
+gmSchemaRevision.sql
+gmServices.sql
+gmI18N.sql
+gmAudit.sql
+gmCrossDB_FKs.sql
+gmCrossDB_FK-views.sql
+gmScoring.sql
 $schema$
 
 #----------------------------------
@@ -124,8 +130,9 @@ port = 5432
 template database = template1
 super user alias = postgres
 procedural language library check = yes
+schema base directory = ../sql/
 schema = $schema$
-sql/gmTestAccounts.sql
+gmTestAccounts.sql
 $schema$
 
 #----------------------------------
@@ -184,7 +191,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-monolithic_core.conf,v $
-# Revision 1.9  2003-10-31 23:25:10  ncq
+# Revision 1.10  2003-11-02 12:48:55  ncq
+# - add schema base directory option to config files
+# - hence we don't need the sql link anymore
+#
+# Revision 1.9  2003/10/31 23:25:10  ncq
 # - actually, no test data whatsoever
 #
 # Revision 1.8  2003/10/31 23:24:31  ncq
