--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.18 $
+version = $Revision: 1.19 $
 
 #----------------------------------
 [installation]
@@ -47,9 +47,10 @@ version = 0.1
 database alias = core
 postgres version = 7.3
 registration database = core
+schema base directory = ../sql/
 
 schema = $schema$
-sql/gmconfiguration.sql
+gmconfiguration.sql
 $schema$
 
 
@@ -60,16 +61,15 @@ database alias = core
 postgres version = 7.3
 registration database = core
 
-# FIXME: add german-chipcard.sql
+schema base directory = ../sql/
 schema = $schema$
-sql/gmDemographics.sql
-sql/gmDemographics-Person-views.sql
-sql/gmDemographics-Person-data.sql
-sql/test-data/gmDemographics-Person-test_data.sql
-sql/gmDemographics-GIS-views.sql
-sql/gmDemographics-GIS-data.sql
-sql/country.specific/de/german-family_relations.sql
-sql/country.specific/au/postcodes.au.sql
+gmDemographics.sql
+gmDemographics-Person-views.sql
+gmDemographics-Person-data.sql
+gmDemographics-GIS-views.sql
+gmDemographics-GIS-data.sql
+country.specific/de/german-family_relations.sql
+country.specific/au/postcodes.au.sql
 $schema$
 
 
@@ -79,14 +79,13 @@ version = 0.1
 database alias = core
 postgres version = 7.3
 registration database = core
+schema base directory = ../sql/
 
-# FIXME: add gmLab-de.sql
 schema = $schema$
-sql/gmclinical.sql
-sql/gmMeasurements.sql
-sql/gmClinicalViews.sql
-sql/gmClinicalData.sql
-sql/country.specific/de/german-gmclinical.sql
+gmclinical.sql
+gmMeasurements.sql
+gmClinicalViews.sql
+gmClinicalData.sql
 $schema$
 
 
@@ -96,10 +95,11 @@ version = 0.1
 database alias = core
 postgres version = 7.3
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmBlobs.sql
-sql/gmBlobsData.sql
-sql/country.specific/de/german-doc_types.sql
+gmBlobs.sql
+gmBlobsData.sql
+country.specific/de/german-doc_types.sql
 $schema$
 
 #----------------------------------
@@ -115,14 +115,15 @@ audit fields table = audit_fields
 scoring disable = 0
 scoring table prefix = score_
 scoring fields table = scoring_fields
+schema base directory = ../sql/
 schema = $schema$
-sql/gmSchemaRevision.sql
-sql/gmServices.sql
-sql/gmI18N.sql
-sql/gmAudit.sql
-sql/gmCrossDB_FKs.sql
-sql/gmCrossDB_FK-views.sql
-sql/gmScoring.sql
+gmSchemaRevision.sql
+gmServices.sql
+gmI18N.sql
+gmAudit.sql
+gmCrossDB_FKs.sql
+gmCrossDB_FK-views.sql
+gmScoring.sql
 $schema$
 
 #----------------------------------
@@ -134,8 +135,9 @@ port = 5432
 template database = template1
 super user alias = postgres
 procedural language library check = yes
+schema base directory = ../sql/
 schema = $schema$
-sql/gmTestAccounts.sql
+gmTestAccounts.sql
 $schema$
 
 #----------------------------------
@@ -210,7 +212,11 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.18  2003-10-31 23:24:32  ncq
+# Revision 1.19  2003-11-02 12:48:55  ncq
+# - add schema base directory option to config files
+# - hence we don't need the sql link anymore
+#
+# Revision 1.18  2003/10/31 23:24:32  ncq
 # - include more test data
 #
 # Revision 1.17  2003/10/19 12:57:19  ncq
