--- a/gnumed/gnumed/server/bootstrap/migrate-standard.conf
+++ b/gnumed/gnumed/server/bootstrap/migrate-standard.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/migrate-standard.conf,v $
-version = $Revision: 1.15 $
+version = $Revision: 1.16 $
 
 #----------------------------------
 [installation]
@@ -38,8 +38,9 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmconfiguration.sql
+gmconfiguration.sql
 $schema$
 
 [service demographics]
@@ -48,10 +49,11 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmDemographics.sql
-sql/gmDemographics-Person-views.sql
-sql/gmDemographics-GIS-views.sql
+gmDemographics.sql
+gmDemographics-Person-views.sql
+gmDemographics-GIS-views.sql
 $schema$
 
 [service clinical]
@@ -60,10 +62,11 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmclinical.sql
-sql/gmMeasurements.sql
-sql/gmClinicalViews.sql
+gmclinical.sql
+gmMeasurements.sql
+gmClinicalViews.sql
 $schema$
 
 #----------------------------------
@@ -79,14 +82,15 @@ audit fields table = audit_fields
 scoring disable = 0
 scoring table prefix = score_
 scoring fields table = scoring_fields
+schema base directory = ../sql/
 schema = $schema$
-sql/gmSchemaRevision.sql
-sql/gmServices.sql
-sql/gmI18N.sql
-sql/gmAudit.sql
-sql/gmCrossDB_FKs.sql
-sql/gmCrossDB_FK-views.sql
-sql/gmScoring.sql
+gmSchemaRevision.sql
+gmServices.sql
+gmI18N.sql
+gmAudit.sql
+gmCrossDB_FKs.sql
+gmCrossDB_FK-views.sql
+gmScoring.sql
 $schema$
 
 #----------------------------------
@@ -172,7 +176,11 @@ $language activation$
 
 #----------------------------------
 # $Log: migrate-standard.conf,v $
-# Revision 1.15  2003-10-19 12:57:19  ncq
+# Revision 1.16  2003-11-02 12:48:55  ncq
+# - add schema base directory option to config files
+# - hence we don't need the sql link anymore
+#
+# Revision 1.15  2003/10/19 12:57:19  ncq
 # - add scoring schema generator and use it
 #
 # Revision 1.14  2003/10/01 15:59:20  ncq
