--- a/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-public_db.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/bootstrap-public_db.conf,v $
-version = $Revision: 1.22 $
+version = $Revision: 1.23 $
 
 #----------------------------------
 [installation]
@@ -45,9 +45,10 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 
 schema = $schema$
-sql/gmconfiguration.sql
+gmconfiguration.sql
 $schema$
 
 
@@ -57,17 +58,18 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmDemographics.sql
-sql/gmDemographics-Person-views.sql
-sql/gmDemographics-Person-data.sql
-sql/gmDemographics-GIS-views.sql
-sql/gmDemographics-GIS-data.sql
-sql/gmDemographics-Org-views.sql
-sql/country.specific/de/gmDemographics.de.sql
-sql/country.specific/de/gmDemographics-Data.de.sql
-sql/country.specific/au/gmDemographics.au.sql
-sql/country.specific/au/postcodes.au.sql
+gmDemographics.sql
+gmDemographics-Person-views.sql
+gmDemographics-Person-data.sql
+gmDemographics-GIS-views.sql
+gmDemographics-GIS-data.sql
+gmDemographics-Org-views.sql
+country.specific/de/gmDemographics.de.sql
+country.specific/de/gmDemographics-Data.de.sql
+country.specific/au/gmDemographics.au.sql
+country.specific/au/postcodes.au.sql
 $schema$
 
 [service clinical]
@@ -76,15 +78,16 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmclinical.sql
-sql/gmMeasurements.sql
-sql/gmClinicalViews.sql
-sql/gmClinicalData.sql
-sql/country.specific/de/gmClinical.de.sql
-sql/country.specific/de/gmClinical-Data.de.sql
-sql/country.specific/de/STIKO-Impfkalender.sql
-sql/country.specific/de/Impfstoffe.sql
+gmclinical.sql
+gmMeasurements.sql
+gmClinicalViews.sql
+gmClinicalData.sql
+country.specific/de/gmClinical.de.sql
+country.specific/de/gmClinical-Data.de.sql
+country.specific/de/STIKO-Impfkalender.sql
+country.specific/de/Impfstoffe.sql
 $schema$
 
 [service documents]
@@ -93,10 +96,11 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmBlobs.sql
-sql/gmBlobsData.sql
-sql/country.specific/de/gmBlobs-Data.de.sql
+gmBlobs.sql
+gmBlobsData.sql
+country.specific/de/gmBlobs-Data.de.sql
 $schema$
 
 [service reference]
@@ -105,8 +109,9 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/
 schema = $schema$
-sql/gmReference.sql
+gmReference.sql
 $schema$
 
 [service AMIS]
@@ -115,8 +120,9 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/country.specific/de/
 schema = $schema$
-sql/country.specific/de/gmAMIS.de.sql
+gmAMIS.de.sql
 $schema$
 
 [service test data]
@@ -126,10 +132,11 @@ version = 0.1
 database alias = core
 postgres version = 7.1
 registration database = core
+schema base directory = ../sql/test-data/
 schema = $schema$
-sql/test-data/gmDemographics-Person-test_data.sql
-sql/test-data/test_data-Leonard_McCoy.sql
-sql/test-data/test_data-James_Kirk.sql
+gmDemographics-Person-test_data.sql
+test_data-Leonard_McCoy.sql
+test_data-James_Kirk.sql
 $schema$
 
 #----------------------------------
@@ -143,14 +150,15 @@ audit fields table = audit_fields
 scoring disable = 0
 scoring table prefix = score_
 scoring fields table = scoring_fields
+schema base directory = ../sql/
 schema = $schema$
-sql/gmSchemaRevision.sql
-sql/gmServices.sql
-sql/gmI18N.sql
-sql/gmAudit.sql
-sql/gmCrossDB_FKs.sql
-sql/gmCrossDB_FK-views.sql
-sql/gmScoring.sql
+gmSchemaRevision.sql
+gmServices.sql
+gmI18N.sql
+gmAudit.sql
+gmCrossDB_FKs.sql
+gmCrossDB_FK-views.sql
+gmScoring.sql
 $schema$
 
 #----------------------------------
@@ -160,8 +168,9 @@ port = 5432
 template database = template1
 super user alias = postgres
 procedural language library check = yes
+schema base directory = ../sql/
 schema = $schema$
-sql/gmPublicAccounts.sql
+gmPublicAccounts.sql
 $schema$
 
 #----------------------------------
@@ -220,7 +229,11 @@ $language activation$
 
 #----------------------------------
 # $Log: bootstrap-public_db.conf,v $
-# Revision 1.22  2003-10-31 23:24:32  ncq
+# Revision 1.23  2003-11-02 12:48:55  ncq
+# - add schema base directory option to config files
+# - hence we don't need the sql link anymore
+#
+# Revision 1.22  2003/10/31 23:24:32  ncq
 # - include more test data
 #
 # Revision 1.21  2003/10/27 16:09:19  ncq
