- force localhost/socket connections by leaving the host name empty

--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.19 $
+version = $Revision: 1.20 $
 
 #----------------------------------
 [installation]
@@ -130,7 +130,7 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 127.0.0.1
+name = 
 port = 5432
 template database = template1
 super user alias = postgres
@@ -212,7 +212,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.19  2003-11-02 12:48:55  ncq
+# Revision 1.20  2003-11-03 22:26:38  ncq
+# - force localhost/socket connections by leaving the host name empty
+#
+# Revision 1.19  2003/11/02 12:48:55  ncq
 # - add schema base directory option to config files
 # - hence we don't need the sql link anymore
 #
