--- a/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
+++ b/gnumed/gnumed/server/bootstrap/gm-debian-postinst.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/Attic/gm-debian-postinst.conf,v $
-version = $Revision: 1.20 $
+version = $Revision: 1.21 $
 
 #----------------------------------
 [installation]
@@ -68,8 +68,6 @@ gmDemographics-Person-views.sql
 gmDemographics-Person-data.sql
 gmDemographics-GIS-views.sql
 gmDemographics-GIS-data.sql
-country.specific/de/german-family_relations.sql
-country.specific/au/postcodes.au.sql
 $schema$
 
 
@@ -99,7 +97,6 @@ schema base directory = ../sql/
 schema = $schema$
 gmBlobs.sql
 gmBlobsData.sql
-country.specific/de/german-doc_types.sql
 $schema$
 
 #----------------------------------
@@ -212,7 +209,10 @@ $language activation$
 
 #----------------------------------
 # $Log: gm-debian-postinst.conf,v $
-# Revision 1.20  2003-11-03 22:26:38  ncq
+# Revision 1.21  2003-11-05 23:51:22  ncq
+# - apply Andreas' changes
+#
+# Revision 1.20  2003/11/03 22:26:38  ncq
 # - force localhost/socket connections by leaving the host name empty
 #
 # Revision 1.19  2003/11/02 12:48:55  ncq
