- fix amis bootstrap file - leave name empty for local host

--- a/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-amis.conf,v $
-version = $Revision: 1.3 $
+version = $Revision: 1.4 $
 
 #----------------------------------
 [installation]
@@ -20,9 +20,6 @@ Medikamentendatenbank.
 Die Haupt-Datenbankstruktur muﬂ bereits in einer Datenbank "gnumed"
 installiert sein, ebenso muﬂ mindestens der Nutzer gm-dbowner
 bereits existieren.
-
-Um die Daten zu installieren, muﬂ der absolute Pfad zu den AMIS-Datenfiles 
-bekannt sein. Dieser wird im Lauf der Installation abgefragt.
 $description$
 
 services = $services$
@@ -41,7 +38,6 @@ registration database = core
 schema base directory = ../sql/country.specific/de/
 schema = $schema$
 gmAMIS.de.sql
-amis-data.sql
 $schema$
 
 #----------------------------------
@@ -59,7 +55,7 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 127.0.0.1
+name = 
 port = 5432
 template database = template1
 super user alias = postgres
@@ -96,7 +92,11 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-amis.conf,v $
-# Revision 1.3  2003-11-02 12:48:55  ncq
+# Revision 1.4  2003-11-11 19:22:57  ncq
+# - fix amis bootstrap file
+# - leave name empty for local host
+#
+# Revision 1.3  2003/11/02 12:48:55  ncq
 # - add schema base directory option to config files
 # - hence we don't need the sql link anymore
 #
