--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.9 $
+version = $Revision: 1.10 $
 
 #----------------------------------
 [installation]
@@ -100,7 +100,7 @@ $schema$
 # servers
 #----------------------------------
 [server local host]
-name = 127.0.0.1
+name = 
 port = 5432
 template database = template1
 super user alias = postgres
@@ -137,7 +137,11 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.9  2003-11-02 12:48:55  ncq
+# Revision 1.10  2003-11-11 19:22:57  ncq
+# - fix amis bootstrap file
+# - leave name empty for local host
+#
+# Revision 1.9  2003/11/02 12:48:55  ncq
 # - add schema base directory option to config files
 # - hence we don't need the sql link anymore
 #
