--- a/gnumed/gnumed/client/wxpython/gui/plugins.conf.sample
+++ b/gnumed/gnumed/client/wxpython/gui/plugins.conf.sample
@@ -1,7 +1,7 @@
 # GnuMed GUI initial plugin load order configuration
 # --------------------------------------------------
 # $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/client/wxpython/gui/Attic/plugins.conf.sample,v $
-# $Id: plugins.conf.sample,v 1.3 2003-04-04 23:15:47 ncq Exp $
+# $Id: plugins.conf.sample,v 1.4 2003-11-17 10:56:41 sjtan Exp $
 #
 # If this file does not exist the GUI will scan the
 # directory and load all files as plugins. If you want
@@ -31,11 +31,16 @@ gmContacts
 gmOffice
 gmPython
 gmSQL
+gmDemographicsEditor
 $load order$
 
 # --------------------------------------------------
 # $Log: plugins.conf.sample,v $
-# Revision 1.3  2003-04-04 23:15:47  ncq
+# Revision 1.4  2003-11-17 10:56:41  sjtan
+#
+# synced and commiting.
+#
+# Revision 1.3  2003/04/04 23:15:47  ncq
 # - renamed to clinical* as per Richard's request
 # - updated plugins.conf.sample
 #
