- add Prevenar-Impfpläne

--- a/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
+++ b/gnumed/gnumed/server/bootstrap/bootstrap-de.conf
@@ -6,7 +6,7 @@
 #----------------------------------
 [revision control]
 file = $Source: /home/ncq/Projekte/cvs2git/vcs-mirror/gnumed/gnumed/server/bootstrap/bootstrap-de.conf,v $
-version = $Revision: 1.10 $
+version = $Revision: 1.11 $
 
 #----------------------------------
 [installation]
@@ -59,8 +59,9 @@ schema base directory = ../sql/country.specific/de/
 schema = $schema$
 gmClinical.de.sql
 gmClinical-Data.de.sql
-STIKO-Impfkalender.sql
 Impfstoffe.sql
+Impfplan-Prevenar.sql
+STIKO-Impfkalender.sql
 $schema$
 
 [service documents-de]
@@ -137,7 +138,10 @@ $language library dirs$
 
 #----------------------------------
 # $Log: bootstrap-de.conf,v $
-# Revision 1.10  2003-11-11 19:22:57  ncq
+# Revision 1.11  2003-11-26 23:57:51  ncq
+# - add Prevenar-Impfpläne
+#
+# Revision 1.10  2003/11/11 19:22:57  ncq
 # - fix amis bootstrap file
 # - leave name empty for local host
 #
